Without cheating, I refactored the code to take slope into account.  This is a wee bit more promising, but dupe points need to be addressed.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /LeetCodeMaxPointsOnALine/bin/Debug/netcoreapp3.1
 /LeetCodeMaxPointsOnALine/obj/Debug/netcoreapp3.1
 /LeetCodeMaxPointsOnALine/obj
+/.vs/LeetCodeMaxPointsOnALine/DesignTimeBuild
+/.vs/LeetCodeMaxPointsOnALine/v16
